Fix deprecated BungeeCord API usages (disconnect(String) → BaseComponent, getAddress() → getSocketAddress())