@@ -9,9 +9,8 @@ import ru.matveylegenda.tiauth.util.colorizer.impl.MiniMessageColorizer;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.net.URL;
+import java.net.URI;
 import java.util.concurrent.CompletableFuture;
-import java.util.function.Consumer;
 
 @UtilityClass
 public class Utils {
@@ -51,8 +50,8 @@ public class Utils {
     public CompletableFuture<String> checkUpdates() {
         return CompletableFuture.supplyAsync(() -> {
             try (BufferedReader reader = new BufferedReader(new InputStreamReader(
-                    new URL("https://raw.githubusercontent.com/1050TIt0p/tiAuth/master/VERSION")
-                            .openStream()))) {
+                    URI.create("https://raw.githubusercontent.com/1050TIt0p/tiAuth/master/VERSION")
+                            .toURL().openStream()))) {
 
                 return reader.readLine().trim();
             } catch (IOException e) {
